--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -36,7 +36,7 @@
         <sponsor xml:id="UT22084-050-003-33122">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.18 <date>2024</date>
+                <edition>v 1.2.19 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -238,6 +238,9 @@
                 </change>
                 <change who="#andre" when="2024-03-02T18:30:06.659Z" type="text-version" status="1.2.18" xml:id="UT22084-050-003-33226">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#andre" when="2024-03-08T14:08:28.381Z" type="text-version" status="1.2.19" xml:id="UT22084-050-003-33227">
+                    <desc>The wording "that the Buddha states he can see" was removed of numerous definitions.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -11196,17 +11199,15 @@
             </gloss>
           </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-050-003-2184">
-              <term type="translationMain">Mañjuśrī Kumārabhūta</term>
-              <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">mañjuśrī
-                kumārabhūta</term>
-              <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">’jam dpal gzhon
-                nur gyur pa</term>
-              <term xml:lang="bo" type="attestedSource" n="1" status="verified">འཇམ་དཔལ་གཞོན་ནུར་གྱུར་པ།</term>
-              <note type="definition">
-                <p>An epithet of Mañjuśrī, the “Ever-Youthful.”</p>
-              </note>
-            </gloss>
+                        <gloss xml:id="UT22084-050-003-2184" type="person" mode="match">
+                            <term type="translationMain">Mañjuśrī Kumārabhūta</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">mañjuśrī kumārabhūta</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">’jam dpal gzhon nur gyur pa</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">འཇམ་དཔལ་གཞོན་ནུར་གྱུར་པ།</term>
+                            <note type="definition">
+                                <p>An epithet of Mañjuśrī, the “Ever-Youthful.”</p>
+                            </note>
+                        </gloss>
                     </item>
           <item>
             <gloss xml:id="UT22084-050-003-2185" type="term" mode="match">
@@ -13090,7 +13091,7 @@
                 dbyangs dbang phyug zla ba</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་སྤྲིན་སྒྲ་དབྱངས་དབང་ཕྱུག་ཟླ་བ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -13141,7 +13142,7 @@
                 kyi sgron ma</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་ཀྱི་ཤུགས་ཀྱི་སྒྲོན་མ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a western buddha
+                <p>A buddha in a western buddha
                   realm.</p>
               </note>
             </gloss>
@@ -13154,7 +13155,7 @@
                 phyug rnam sgrogs</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་ཀྱི་དབང་ཕྱུག་རྣམ་སྒྲོགས།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -13370,7 +13371,7 @@
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">’gro ba’i dbang phyug sA la’i dbang po</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">འགྲོ་བའི་དབང་ཕྱུག་སཱ་ལའི་དབང་པོ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -13480,7 +13481,7 @@
                 pa</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">བ་བླ་གྲགས་པ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a western buddha
+                <p>A buddha in a western buddha
                   realm.</p>
               </note>
             </gloss>
@@ -14022,7 +14023,7 @@
                 po</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐར་མའི་སྙིང་པོ།</term>
               <note type="definition">
-                <p>The name of a buddha whom the Buddha Śākyamuni states he can see in a southern
+                <p>The name of a buddha in a southern
                   buddha realm.</p>
               </note>
             </gloss>
@@ -14218,7 +14219,7 @@
                 par gnon</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྐུ་མཆོག་རྣམ་པར་གནོན།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a western buddha
+                <p>A buddha in a western buddha
                   realm.</p>
               </note>
             </gloss>
@@ -14672,7 +14673,7 @@
                 sgra dbyangs rnam par bsgrags pa</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡིད་དུ་འོང་བའི་སྒྲ་དབྱངས་རྣམ་པར་བསྒྲགས་པ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -14951,7 +14952,7 @@
                 grags pa</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱུ་སྐར་ཆོ་ག་གྲགས་པ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -15051,7 +15052,7 @@
                 bu’i rnam par rgyal ba’i snying po</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྲེད་མེད་ཀྱི་བུའི་རྣམ་པར་རྒྱལ་བའི་སྙིང་པོ།</term>
               <note type="definition">
-                <p>The name given for a buddha whom the Buddha Śākyamuni states he can see in a
+                <p>The name given for a buddha in a
                   southern buddha realm.</p>
               </note>
             </gloss>
@@ -15407,7 +15408,7 @@
               <note type="definition">
                 <p>One of the hundred names prophesied by the Buddha Ratnagarbha for 2,500 buddhas,
                   presumably the name of twenty-five of those buddhas. It is also the name given for
-                  a buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                  a buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -15600,7 +15601,7 @@
                 phyug</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགའ་བའི་དབང་ཕྱུག</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -15692,7 +15693,7 @@
                 bo</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">རིན་ཆེན་རི་བོ།</term>
               <note type="definition">
-                <p>A buddha whom Śākyamuni states he can see in a western buddha realm.</p>
+                <p>A buddha in a western buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -15717,7 +15718,7 @@
                 pa yang dag bsags</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡོན་ཏན་བསྒྱིངས་པ་ཡང་དག་བསགས།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -15797,7 +15798,7 @@
                 chen ngos</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀླུ་དབང་རིན་ཆེན་ངོས།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -16011,7 +16012,7 @@
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">sA la’i thigs pa’i rgyal po</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སཱ་ལའི་ཐིགས་པའི་རྒྱལ་པོ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -16134,7 +16135,7 @@
                 po</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཀུན་དུ་སྙིང་པོ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a western buddha
+                <p>A buddha in a western buddha
                   realm.</p>
               </note>
             </gloss>
@@ -16200,8 +16201,7 @@
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡང་དག་འཚོ།</term>
               <note type="definition">
                 <p>An ājīvika ascetic who asks King Ambara, a previous life of Śākyamuni, for his
-                  genitalia. Also the name of an eastern buddha realm that Śākyamuni states he can
-                  see. The Sanskrit is also the name for one of the hells, which in Tibetan is
+                  genitalia. Also the name of an eastern buddha realm. The Sanskrit is also the name for one of the hells, which in Tibetan is
                   rendered <foreign xml:lang="Bo-Ltn" type="term">yang sos</foreign>. In the
                   traditional Buddhist list of eight hot hells, this is the “reviving” hell where
                   beings are repeatedly killed.</p>
@@ -16231,7 +16231,7 @@
                 ’tsho</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡང་དག་འཚོ།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -16724,7 +16724,7 @@
                 pa’i rgyal po</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སེང་གེ་བསྒྱིངས་པའི་རྒྱལ་པོ།</term>
               <note type="definition">
-                <p>A buddha in a southern buddha realm whom Śākyamuni states he can see.</p>
+                <p>A buddha in a southern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -16964,7 +16964,7 @@
                 du ’ong ba</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྒྲ་དབྱངས་ཡིད་དུ་འོང་བ།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -17231,7 +17231,7 @@
                 mdzod</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">དབྱངས་མཁྱེན་མཛོད།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a western buddha
+                <p>A buddha in a western buddha
                   realm.</p>
               </note>
             </gloss>
@@ -17282,7 +17282,7 @@
                 phyug ’od</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">གཟི་བརྗིད་དབང་ཕྱུག་འོད།</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a southern buddha
+                <p>A buddha in a southern buddha
                   realm.</p>
               </note>
             </gloss>
@@ -17575,7 +17575,7 @@
                 mchog</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">འོད་ཟེར་མཆོག</term>
               <note type="definition">
-                <p>A buddha whom the Buddha Śākyamuni states he can see in a western buddha
+                <p>A buddha in a western buddha
                   realm.</p>
               </note>
             </gloss>
@@ -17879,7 +17879,7 @@
                 spyan</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">དྲི་མེད་སྤྱན།</term>
               <note type="definition">
-                <p>The name of a buddha in an eastern buddha realm that Śākyamuni states he can see.
+                <p>The name of a buddha in an eastern buddha realm.
                 </p>
               </note>
             </gloss>
@@ -18126,7 +18126,7 @@
                 zer</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྟག་གི་འོད་ཟེར།</term>
               <note type="definition">
-                <p>A buddha in an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>A buddha in an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -18399,7 +18399,7 @@
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dga’ med</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགའ་མེད།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -18635,7 +18635,7 @@
                 klung</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">འཛམ་བུའི་ཆུ་ཀླུང་།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -18685,7 +18685,7 @@
                 rab</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བའི་གནས་རབ།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -18774,7 +18774,7 @@
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bde mchog</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">བདེ་མཆོག</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -18800,7 +18800,7 @@
                 ’od</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">མེ་ཏོག་འོད།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -18812,7 +18812,7 @@
                 tshogs</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">མེ་ཏོག་སྣ་ཚོགས།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -19180,7 +19180,7 @@
                 rgyas pa</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">མེ་ཏོག་ཀུན་ཏུ་རྒྱས་པ།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -19299,7 +19299,7 @@
                 pa</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཉི་མ་གནས་པ།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -19323,7 +19323,7 @@
                 med</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཤིན་ཏུ་རྡུལ་མེད།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -19391,7 +19391,7 @@
                 ’od</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཁོན་སྦྱོང་འོད།</term>
               <note type="definition">
-                <p>The name of an eastern buddha realm that Śākyamuni states he can see.</p>
+                <p>The name of an eastern buddha realm.</p>
               </note>
             </gloss>
                     </item>
@@ -19417,7 +19417,7 @@
                 ba</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྣམ་པར་རྒྱལ་བ།</term>
               <note type="definition">
-                <p>A buddha realm in the northeast that Śākyamuni states that he can see.</p>
+                <p>A buddha realm in the northeast.</p>
               </note>
             </gloss>
                     </item>
@@ -19440,7 +19440,7 @@
               <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dri mchog</term>
               <term xml:lang="bo" type="attestedSource" n="1" status="verified">དྲི་མཆོག</term>
               <note type="definition">
-                <p>A southern buddha realm that the Buddha Śākyamuni states he can see.</p>
+                <p>A southern buddha realm.</p>
               </note>
             </gloss>
                     </item>
