--- a/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
+++ b/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
@@ -10,13 +10,14 @@
                 <author role="translatorMain" xml:id="UT22084-100-018-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-100-018-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-100-018-13">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-100-018-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-100-018"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-27T15:58:46.353Z" type="text-version" status="0.0.8" xml:id="UT22084-100-018-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:59:16.396Z" type="text-version" status="0.0.9" xml:id="UT22084-100-018-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-08T14:27:30.282Z" type="translation-status" status="2.d" xml:id="UT22084-100-018-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-08T14:27:30.282Z" type="text-version" status="0.0.10" xml:id="UT22084-100-018-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
