--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -14,13 +14,14 @@
                 <author role="translatorMain" xml:id="UT22084-091-040-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-040-2">Lowell Cook</author>
                 <editor role="projectEditor" xml:id="UT22084-091-040-13">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-040-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-040"/>
                 <date/>
             </publicationStmt>
@@ -83,6 +84,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-27T15:56:59.4Z" type="text-version" status="0.0.8" xml:id="UT22084-091-040-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:57:31.271Z" type="text-version" status="0.0.9" xml:id="UT22084-091-040-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-08T14:37:53.75Z" type="translation-status" status="2.d" xml:id="UT22084-091-040-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-08T14:37:53.75Z" type="text-version" status="0.0.10" xml:id="UT22084-091-040-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
