--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -17,13 +17,14 @@
                 <editor role="reviser" xml:id="UT22084-091-009-6">Ācārya Alexis Prado</editor>
                 <editor role="reviser" xml:id="UT22084-091-009-7">Lama Dzatse Tashi Rinpoche</editor>
                 <editor role="projectEditor" xml:id="UT22084-091-009-26">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-009-40">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-009"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +96,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-27T15:54:44.587Z" type="text-version" status="0.0.10" xml:id="UT22084-091-009-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-27T15:55:24.083Z" type="text-version" status="0.0.11" xml:id="UT22084-091-009-41">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-08T14:44:42.469Z" type="translation-status" status="2.d" xml:id="UT22084-091-009-42">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-08T14:44:42.469Z" type="text-version" status="0.0.12" xml:id="UT22084-091-009-43">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
