--- a/translations/kangyur/translations/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
+++ b/translations/kangyur/translations/043-010_toh73-the_sutra_of_the_questions_of_udayana_king_of_vatsa.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-043-010-409">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -184,6 +184,9 @@
                 <change who="#martina-cotter" when="2024-03-12T14:03:34.784Z" type="text-version" status="1.0.0" xml:id="UT22084-043-010-415">
                     <desc>First published version</desc>
                 </change>
+                <change who="#konchog" when="2024-03-12T15:12:31.842Z" type="text-version" status="1.0.1" xml:id="UT22084-043-010-416">
+                    <desc>Quotation marks deleted from title above translation, one other small fix.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -192,7 +195,7 @@
                     Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
                     markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
     <front>
-      <div type="summary">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="summary">
         <head type="summary" tid="1">Summary</head>
         <milestone unit="chunk" xml:id="UT22084-043-010-50"/>
         <p tid="2">Manipulated into a murderous rage by the jealous Queen Anupamā, King Udayana
@@ -206,8 +209,8 @@
           with a plethora of analogies and striking imagery to turn the mind away from sensual
           desires. The work concludes with King Udayana giving up his weapons and going for refuge
           in the Three Jewels, filled with love for all beings.</p>
-      </div>
-      <div type="acknowledgment">
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment">
         <head type="acknowledgment" tid="3">Acknowledgements</head>
         <milestone unit="chunk" xml:id="UT22084-043-010-51"/>
         <p tid="4">The translation and introduction were prepared by Ben Ewing and Lowell Cook.</p>
@@ -216,10 +219,10 @@
           introduction, and incorporated the evidence from the portions preserved in Sanskrit. Dawn
           Collins copyedited the text. Martina Cotter was in charge of the digital publication
           process.</p>
-      </div>
-      <div type="introduction">
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="introduction">
         <head type="introduction" tid="8">Introduction</head>
-        <div type="section" xml:id="UT22084-043-010-introduction-1">
+        <tei:div type="section" xml:id="UT22084-043-010-introduction-1">
           <milestone unit="chunk" xml:id="UT22084-043-010-55"/>
           <p tid="10">
                         <title xml:lang="en">King Udayana of Vatsa’s
@@ -335,15 +338,15 @@
             translation is based on the Degé Kangyur with reference to variant readings recorded in
             the Pedurma comparative edition and Stok Palace edition, as well as the Sanskrit
             excerpts in the <title xml:lang="Sa-Ltn">Śikṣāsamuccaya</title>. </p>
-        </div>
-      </div>
+        </tei:div>
+      </tei:div>
     </front>
     <body>
-      <div type="translation">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="translation">
         <head type="translation"> The Translation </head>
         <head type="titleHon" tid="15">The Noble Episode</head>
-        <head type="titleMain" tid="16">“King Udayana of Vatsa’s Questions”</head>
-        <div type="section" xml:id="UT22084-043-010-section-1">
+        <head type="titleMain" tid="16">King Udayana of Vatsa’s Questions</head>
+        <tei:div type="section" xml:id="UT22084-043-010-section-1">
           <milestone unit="chunk" xml:id="UT22084-043-010-68"/>
           <p tid="20">
                         <ref cRef="F.204.b" type="folio" xml:id="UT22084-043-010-360"/> Homage to all
@@ -1694,19 +1697,19 @@
             rejoiced and praised the Blessed One’s words. </p>
           <milestone unit="chunk" xml:id="UT22084-043-010-281"/>
           <trailer tid="198">Thus concludes <title xml:lang="en">The Episode “King Udayana of
-              Vatsa’s Questions”</title>, the twenty-ninth of the one hundred thousand sections of
+              Vatsa’s Questions,”</title> the twenty-ninth of the one hundred thousand sections of
             the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
-        </div>
-        <div type="colophon" xml:id="UT22084-043-010-colophon">
+        </tei:div>
+        <tei:div type="colophon" xml:id="UT22084-043-010-colophon">
           <head type="colophon" tid="199">Colophon</head>
           <milestone unit="chunk" xml:id="UT22084-043-010-282"/>
           <p tid="200">Translated, edited, and finalized by, among others, the Indian preceptors
             Jinamitra and Surendrabodhi and the chief editor-translator, Bandé Yeshé Dé.</p>
-        </div>
-      </div>
+        </tei:div>
+      </tei:div>
     </body>
     <back>
-      <div type="notes">
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="notes">
         <head type="notes" tid="201">Notes</head>
         <list type="abbreviations">
           <head tid="202">Abbreviations</head>
@@ -1731,10 +1734,10 @@
                         <expan>Stok Palace </expan>
                     </item>
         </list>
-      </div>
-      <div type="listBibl">
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="listBibl">
         <head type="listBibl" tid="203">Bibliography</head>
-        <div type="section" xml:id="UT22084-043-010-listBibl-1">
+        <tei:div type="section" xml:id="UT22084-043-010-listBibl-1">
           <bibl xml:id="UT22084-043-010-288">
                         <title xml:lang="Bo-Ltn">bad sa’i rgyal po ’char byed
               kyis zhus pa’i le’u</title> (<title xml:lang="Sa-Ltn">Udayanavatsarāja­pari­pṛcchāparivarta</title>) Toh 73, Degé Kangyur vol. 43 (dkon
@@ -1800,9 +1803,9 @@
           <bibl xml:id="UT22084-043-010-307">Zürcher, Erik. <title xml:lang="en">The Buddhist
               Conquest of China: The Spread and Adaptation of Buddhism in Early Medieval
               China</title>. Third Edition. Leiden: Brill, 1959 (2007 reprint).</bibl>
-        </div>
-      </div>
-      <div type="glossary" status="excluded">
+        </tei:div>
+      </tei:div>
+      <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="glossary" status="excluded">
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-043-010-309">
@@ -2315,7 +2318,7 @@
             </gloss>
                     </item>
         </list>
-      </div>
+      </tei:div>
     </back>
   </text>
 </TEI>
