--- a/translations/tengyur/placeholders/030-001_toh1785-pradipodyotananamatika.xml
+++ b/translations/tengyur/placeholders/030-001_toh1785-pradipodyotananamatika.xml
@@ -13,11 +13,11 @@
                 <editor role="projectEditor" xml:id="UT23703-030-001-17">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-030-001"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +66,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-23T16:14:56.105Z" type="text-version" status="0.0.6" xml:id="UT23703-030-001-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-14T13:58:18.883Z" type="translation-status" status="2.g" xml:id="UT23703-030-001-21">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-14T13:58:18.883Z" type="text-version" status="0.0.7" xml:id="UT23703-030-001-22">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
