--- a/translations/kangyur/placeholders/081-011_toh442-guhyasamaja.xml
+++ b/translations/kangyur/placeholders/081-011_toh442-guhyasamaja.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-081-011-3">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-081-011"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-23T16:11:57.032Z" type="text-version" status="0.0.9" xml:id="UT22084-081-011-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-14T13:59:41.192Z" type="translation-status" status="2.g" xml:id="UT22084-081-011-18">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-14T13:59:41.192Z" type="text-version" status="0.0.10" xml:id="UT22084-081-011-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
