--- a/translations/kangyur/placeholders/096-066_toh817,1101,4400a-verses_of_wellwishing.xml
+++ b/translations/kangyur/placeholders/096-066_toh817,1101,4400a-verses_of_wellwishing.xml
@@ -9,11 +9,11 @@
                 <title type="mainTitle" xml:lang="en">Verses of Well-wishing</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-066"/>
             </publicationStmt>
             <sourceDesc>
@@ -60,6 +60,12 @@
                 </change>
                 <change who="#john" when="2024-03-06T15:27:32.611Z" type="text-version" status="0.0.2" xml:id="UT22084-096-066-4">
                     <desc>Added Toh 4400a triplicate</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-14T15:42:39.204Z" type="translation-status" status="3" xml:id="UT22084-096-066-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-14T15:42:39.204Z" type="text-version" status="0.0.3" xml:id="UT22084-096-066-6">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
