--- a/translations/kangyur/placeholders/072-027_toh327-sutra_of_the_true_person.xml
+++ b/translations/kangyur/placeholders/072-027_toh327-sutra_of_the_true_person.xml
@@ -19,14 +19,14 @@
                 <editor role="proofreader" xml:id="UT22084-072-027-8">Artur Przybysławski</editor>
                 <author role="translatorEng" xml:id="UT22084-072-027-9">Phusar Penpa Dhondup</author>
                 <editor role="proofreader" xml:id="UT22084-072-027-10">Paul Partington</editor>
-                <editor role="projectEditor" xml:id="UT22084-072-027-11">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-027-11">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-027"/>
                 <date/>
             </publicationStmt>
@@ -104,6 +104,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-07T10:19:41.57Z" type="text-version" status="0.0.14" xml:id="UT22084-072-027-32">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-07T10:21:10.76Z" type="text-version" status="0.0.15" xml:id="UT22084-072-027-33">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-15T13:02:11.337Z" type="translation-status" status="2.e" xml:id="UT22084-072-027-34">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-15T13:02:11.337Z" type="text-version" status="0.0.16" xml:id="UT22084-072-027-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
