--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryagrahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gza' rnams kyi yum zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-057-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-057-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-057-2">Adam Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-091-057-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-057"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +66,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-05T14:09:50.712Z" type="text-version" status="0.0.5" xml:id="UT22084-091-057-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-05T14:10:20.633Z" type="text-version" status="0.0.6" xml:id="UT22084-091-057-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T13:51:35.292Z" type="translation-status" status="2.f" xml:id="UT22084-091-057-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T13:51:35.292Z" type="text-version" status="0.0.7" xml:id="UT22084-091-057-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
