--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Grahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-058-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-058-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-058-2">Adam Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-091-058-13">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-091-058"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +67,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-02-05T14:10:49.727Z" type="text-version" status="0.0.5" xml:id="UT22084-091-058-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-02-05T14:11:21.619Z" type="text-version" status="0.0.6" xml:id="UT22084-091-058-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T13:52:41.338Z" type="translation-status" status="2.f" xml:id="UT22084-091-058-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T13:52:41.338Z" type="text-version" status="0.0.7" xml:id="UT22084-091-058-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
