--- a/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
+++ b/translations/kangyur/placeholders/091-040_toh643,890-the_incantation_of_the_promise_made_by_maitreya.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-040-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-040"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-08T14:37:53.75Z" type="text-version" status="0.0.10" xml:id="UT22084-091-040-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T14:29:46.616Z" type="translation-status" status="2.c" xml:id="UT22084-091-040-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T14:29:46.616Z" type="text-version" status="0.0.11" xml:id="UT22084-091-040-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
