--- a/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
+++ b/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
@@ -13,11 +13,11 @@
                 <editor role="copyEditor" xml:id="UT22084-071-013-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-071-013"/>
                 <date/>
             </publicationStmt>
@@ -80,6 +80,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-01T14:27:04.409Z" type="text-version" status="0.0.10" xml:id="UT22084-071-013-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T14:32:22.966Z" type="translation-status" status="2.c" xml:id="UT22084-071-013-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T14:32:22.966Z" type="text-version" status="0.0.11" xml:id="UT22084-071-013-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
