--- a/translations/kangyur/placeholders/090-011_toh567,1003-jayavati_the_great_queen_of_spells.xml
+++ b/translations/kangyur/placeholders/090-011_toh567,1003-jayavati_the_great_queen_of_spells.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rig sngags kyi rgyal mo chen mo rgyal ba can/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">jayavatīmahāvidyārājñī</title>
                 <title type="mainTitle" xml:lang="en">Jayavatī, the Great Queen of Spells</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Jayavatīmahāvidyārājñī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rig sngags kyi rgyal mo chen mo rgyal ba can/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryajayavatīnāmamahāvidyārājñī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig sngags kyi rgyal mo chen mo rgyal ba can zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmamahāvidyārājñī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig sngags kyi rgyal mo chen mo rgyal ba can zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmamahāvidyārājñī</title>
+                <author role="translatorMain" xml:id="UT22084-090-011-1"/>
+                <consultant role="projectManager" xml:id="UT22084-090-011-2">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-090-011-3">Giuliano Francisco Proença</author>
+                <editor role="proofreader" xml:id="UT22084-090-011-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-011"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +43,36 @@
                     <idno source-id="O1JC114941JC12766" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:50:11.165Z" user="admin">11/05/2023 13:50:11</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:40:30.754Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:40:30.754Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:50:06.919Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:50:06.919Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-01T09:40:30.754Z" type="translation-status" status="4" xml:id="UT22084-090-011-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:40:30.754Z" type="text-version" status="0.0.1" xml:id="UT22084-090-011-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:50:06.919Z" type="translation-status" status="3" xml:id="UT22084-090-011-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:50:06.919Z" type="text-version" status="0.0.2" xml:id="UT22084-090-011-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:50:40.544Z" type="text-version" status="0.0.3" xml:id="UT22084-090-011-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:51:04.373Z" type="text-version" status="0.0.4" xml:id="UT22084-090-011-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-011-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:11:25.882Z" type="translation-status" status="2.h" xml:id="UT22084-090-011-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:11:25.882Z" type="text-version" status="0.0.6" xml:id="UT22084-090-011-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
