--- a/translations/kangyur/placeholders/090-012_toh568,1004-the_incantation_of_jayavati.xml
+++ b/translations/kangyur/placeholders/090-012_toh568,1004-the_incantation_of_jayavati.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal ba can gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">jayavatīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Jayavatī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Jayavatīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">rgyal ba can gyi gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryajayavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal ba can zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal ba can zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryajayavatīnāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-090-012-1"/>
+                <consultant role="projectManager" xml:id="UT22084-090-012-2">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-090-012-3">Giuliano Francisco Proença</author>
+                <editor role="proofreader" xml:id="UT22084-090-012-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-012"/>
                 <date/>
             </publicationStmt>
@@ -40,9 +43,36 @@
                     <idno source-id="O1JC114941JC12767" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:54:48.234Z" user="admin">11/05/2023 13:54:48</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:41:17.46Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:54:43.953Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:54:43.953Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-01T09:41:17.46Z" type="translation-status" status="4" xml:id="UT22084-090-012-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:41:17.46Z" type="text-version" status="0.0.1" xml:id="UT22084-090-012-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:54:43.953Z" type="translation-status" status="3" xml:id="UT22084-090-012-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:54:43.953Z" type="text-version" status="0.0.2" xml:id="UT22084-090-012-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:55:10.057Z" type="text-version" status="0.0.3" xml:id="UT22084-090-012-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:55:37.287Z" type="text-version" status="0.0.4" xml:id="UT22084-090-012-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-012-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:12:25.667Z" type="translation-status" status="2.h" xml:id="UT22084-090-012-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:12:25.667Z" type="text-version" status="0.0.6" xml:id="UT22084-090-012-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
