--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -5,7 +5,7 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Single Stanza</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">ekagāthā</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Ekagāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gcig pa/</title>
                 <author role="translatorMain" xml:id="UT22084-072-023-1"/>
                 <consultant role="projectManager" xml:id="UT22084-072-023-2">Giuliano Francisco Proença</consultant>
@@ -13,11 +13,11 @@
                 <editor role="proofreader" xml:id="UT22084-072-023-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -57,6 +57,12 @@
                 </change>
                 <change who="#john" when="2023-08-04T19:02:09.933Z" type="text-version" status="0.0.6" xml:id="UT22084-072-023-12">
                     <desc>User set version to 0.0.6</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:18:36.077Z" type="translation-status" status="2.h" xml:id="UT22084-072-023-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:18:36.077Z" type="text-version" status="0.0.7" xml:id="UT22084-072-023-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
