--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -4,15 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa bzhi pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">caturgāthā</title>
                 <title type="mainTitle" xml:lang="en">The Four Stanzas</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Caturgāthā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa bzhi pa/</title>
+                <author role="translatorMain" xml:id="UT22084-072-024-1"/>
+                <consultant role="projectManager" xml:id="UT22084-072-024-2">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-024-3">Giuliano Francisco Proença</author>
+                <editor role="proofreader" xml:id="UT22084-072-024-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-072-024"/>
                 <date/>
             </publicationStmt>
@@ -27,9 +32,36 @@
                     <idno source-id="O1JC114941JC12000" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:44:10.691Z" user="admin">11/05/2023 13:44:10</note>    <note type="updated" update="translation-status" value="4" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-01T09:42:33.49Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2023-05-11T13:44:06.443Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:44:06.443Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-03-01T09:42:33.49Z" type="translation-status" status="4" xml:id="UT22084-072-024-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-01T09:42:33.49Z" type="text-version" status="0.0.1" xml:id="UT22084-072-024-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:44:06.443Z" type="translation-status" status="3" xml:id="UT22084-072-024-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:44:06.443Z" type="text-version" status="0.0.2" xml:id="UT22084-072-024-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:44:33.891Z" type="text-version" status="0.0.3" xml:id="UT22084-072-024-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:44:56.192Z" type="text-version" status="0.0.4" xml:id="UT22084-072-024-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-072-024-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:22:36.153Z" type="translation-status" status="2.h" xml:id="UT22084-072-024-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-18T15:22:36.153Z" type="text-version" status="0.0.6" xml:id="UT22084-072-024-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
