--- a/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
+++ b/translations/kangyur/placeholders/065-005_toh242-the_sutra_of_the_wheel_of_dedication.xml
@@ -5,27 +5,28 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">yongs su bsngo ba'i 'khor lo'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pariṇatacakrasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pariṇatacakrasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Wheel of Dedication</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yongs su bsngo ba'i 'khor lo zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">pariṇatacakranāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Pariṇatacakranāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">pariṇāmacakrasūtra</title>
                 <title type="otherTitle" xml:lang="en">[Note: the content is almost the same as Toh 809, see Saerji ARIRIAB-14.]</title>
-                <author role="translatorMain" ref="contributors.xml#team-57"/>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-352">Ringu Tulku Rinpoche</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-351">Lama Karma Wangmo</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-352">Ringu Tulku Rinpoche</author>
-                <author role="translatorEng" ref="contributors.xml#person-353">Holly Gayley</author>
-                <author role="translatorEng" ref="contributors.xml#person-351">Lama Karma Wangmo</author>
-                <consultant role="advisor" ref="contributors.xml#person-96">L.S. Summer</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-354">Zhujun Ma</consultant>
-                <editor role="reviser" ref="contributors.xml#person-355">Joshua Shelton</editor>
+                <author role="translatorMain" xml:id="UT22084-065-005-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-065-005-2">Ringu Tulku Rinpoche</consultant>
+                <consultant role="projectManager" xml:id="UT22084-065-005-3">Lama Karma Wangmo</consultant>
+                <author role="translatorEng" xml:id="UT22084-065-005-4">Ringu Tulku Rinpoche</author>
+                <author role="translatorEng" xml:id="UT22084-065-005-5">Holly Gayley</author>
+                <author role="translatorEng" xml:id="UT22084-065-005-6">Lama Karma Wangmo</author>
+                <consultant role="advisor" xml:id="UT22084-065-005-7">L.S. Summer</consultant>
+                <consultant role="advisor" xml:id="UT22084-065-005-8">Zhujun Ma</consultant>
+                <editor role="reviser" xml:id="UT22084-065-005-9">Joshua Shelton</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-065-005"/>
                 <date/>
             </publicationStmt>
@@ -33,8 +34,8 @@
                 <bibl key="toh242" type="text">
                     <ref>Toh 242</ref>
                     <biblScope>vol.65, ff. 303r-306r(pp.605-611)</biblScope>
-                    <author role="translatorTib">t. siladharma</author>
-                    <author role="translatorTib">rnam par mi rtog pa</author>
+                    <author role="translatorTib" xml:id="UT22084-065-005-17">t. siladharma</author>
+                    <author role="translatorTib" xml:id="UT22084-065-005-18">rnam par mi rtog pa</author>
                     <location work="UT4CZ5369" count-pages="7">
                         <volume number="65" start-page="605" end-page="611"/>
                     </location>
@@ -42,15 +43,36 @@
                     <idno source-id="O1JC114941JC11891" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-01-11T11:49:08.448Z" user="admin">11/01/2021 11:49:08</note>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:46:23.757Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:46:23.757Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2020-11-30T10:05:23.392Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-30T10:05:23.392Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-11T11:47:28.457Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-11T11:49:03.961Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-10-02T13:46:23.757Z" type="translation-status" status="4" xml:id="UT22084-065-005-10">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2020-10-02T13:46:23.757Z" type="text-version" status="0.0.1" xml:id="UT22084-065-005-11">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:05:23.392Z" type="translation-status" status="3" xml:id="UT22084-065-005-12">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-11-30T10:05:23.392Z" type="text-version" status="0.0.2" xml:id="UT22084-065-005-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-11T11:47:28.457Z" type="text-version" status="0.0.3" xml:id="UT22084-065-005-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-11T11:49:03.961Z" type="text-version" status="0.0.4" xml:id="UT22084-065-005-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-065-005-16">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-20T13:48:17.954Z" type="translation-status" status="2.h" xml:id="UT22084-065-005-19">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-03-20T13:48:17.954Z" type="text-version" status="0.0.6" xml:id="UT22084-065-005-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
